--- a/partials/links.hbs
+++ b/partials/links.hbs
@@ -24,10 +24,10 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
 />
-<link
+{{!-- <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-/>
+/> --}}
 
 <link
   rel="icon"
