feat: implement loading btn

--- a/partials/main.hbs
+++ b/partials/main.hbs
@@ -116,7 +116,11 @@
       <div style="display: none">
         <select id="product-select"></select>
       </div>
-      <button type="submit">Submit</button>
+      <button type="submit">Submit
+        <span
+          id="order__loading-indicator"
+          class="loading-indicator ml-2 hidden"
+        ></span></button>
     </form>
     <p id="form-message"></p>
   </section>
