--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,7 +1,8 @@
-{{!-- <script
+{{! <script
   src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
 ></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> --}}
+}}
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <!-- Google tag (gtag.js) -->
 <!-- Hotjar Tracking Code for Main Website -->
@@ -12,5 +13,4 @@
   src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
 ></script>
 
-{{! <script src="sweetalert2.all.min.js"></script> }}
 <script type="module" src="{{resolve-from-root '/global.js'}}"></script>
