--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -6,10 +6,10 @@
       alt="Chrisport logo"
     />
     <ul id="nav-links"></ul>
-    {{!-- <div class="search-bar">
+    {{! <div class="search-bar">
       <input type="text" placeholder="Search" />
       <button>Search</button>
-    </div> --}}
+    </div> }}
   </nav>
 </header>
 
