--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -10,7 +10,7 @@
   </div>
   <p id="facebook-disclaimer"></p>
   <p id="copyright"></p>
-  <p id="designer"></p>
+  {{! <p id="designer"></p> }}
 </footer>
 
 <link rel="stylesheet" href="{{resolve-from-root 'partials/footer.css'}}" />
