--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,10 +1,12 @@
 <header>
   <nav>
-    <img
-      class="logo"
-      src="/assets/imgs/chrisport-logo.png"
-      alt="Chrisport logo"
-    />
+    <a href="/">
+      <img
+        class="logo"
+        src="/assets/imgs/chrisport-logo.png"
+        alt="Chrisport logo"
+      />
+    </a>
     <ul id="nav-links"></ul>
     {{! <div class="search-bar">
       <input type="text" placeholder="Search" />
